--- a/Navbar-Modal/index.html
+++ b/Navbar-Modal/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar-Modal</title>
     <script src="https://kit.fontawesome.com/206993456b.js"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -30,9 +29,7 @@
                   <li><a href="">Banana</a></li>
                   <li><a href="">Icecreame</a></li>
                   <li>
-                    <a href=""
-                      >Timminder Cad <i class="fa-solid fa-chevron-down"></i
-                    ></a>
+                    <a href="">Fruits</a>
                   </li>
                   <li><a href="">Icecreame</a></li>
                   <li><a href="">Icecreame</a></li>
@@ -49,9 +46,92 @@
           </div>
         </div>
       </div>
+
+      <!-- ! ========== Hero_section ============ -->
+
+      <div class="hero_section">
+        <div class="center">
+          <h1>Welcome Our Website</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            possimus aliquam, explicabo itaque, nemo reiciendis corporis laborum
+            delectus earum accusamus perferendis suscipit. Explicabo dolor
+            necessitatibus maiores et illo inventore soluta quis unde facilis
+            aperiam laborum non ut ipsa molestias consequuntur tempora vitae,
+            nulla rem deleniti repellendus assumenda nihil iusto. Est.
+          </p>
+          <button class="learn_btn">Learn More</button>
+        </div>
+      </div>
     </div>
 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- !=========== CARD_SECTION =========== -->
+
+    <div class=" card_section">
+      <div class="card">
+        <div class="card_img">
+          <img src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F2370cb1e-4dc2-11e4-9683-00144feab7de?source=next-article&fit=scale-down&quality=highest&width=700&dpr=1" alt="">
+        </div>
+        <div class="card_body">
+          <h1>Brendon Eich</h1>
+          <p>Javascript Founder</p>
+          <q><i>Embrace change and adapt quickly to stay ahead in the tech world</i></q>
+        </div>
+        <div class="card_footer">
+          <button>Learn More</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzjobYplnT6JR7zB4QC16TJv8iZNokUimWKR-Fg9PgrJLojNREofpt9RApuhZnHrYhMQs&usqp=CAU" alt="">
+        </div>
+        <div class="card_body">
+          <h1>Mark Zuckerberg</h1>
+          <p>Facebook Founder</p>
+          <q><i>Move fast and break things. Unless you are breaking stuff, you are not moving fast enough.</i></q>
+        </div>
+        <div class="card_footer">
+          <button>Learn More</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTATgQfiBMO4H8n-6ZYYw8bzocBjQ2miUgdp05o3YwO21DeKDGd" alt="">
+        </div>
+        <div class="card_body">
+          <h1>Bill Gates</h1>
+          <p>Microsoft Founder</p>
+          <q><i>Success is a lousy teacher. It seduces smart people into thinking they can’t lose.</i></q>
+        </div>
+        <div class="card_footer">
+          <button>Learn More</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer_section">
+      <div class="footer_head">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+      </div>
+      <div class="footer_center">
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Need Help?</a></li>
+          <li><a href="">Guide</a></li>
+          <li><a href="">Term of Use</a></li>
+          <li><a href="">Advertising</a></li>
+          <li><a href="">Jobs</a></li>
+        </ul>
+      </div>
+      <div class="footer_footer">
+        <p>@copyright 2024 <a href="">mahabur_io</a></p>
+      </div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
