--- a/User Input/index.html
+++ b/User Input/index.html
@@ -11,9 +11,9 @@
 <body>
 
   <div class="container-fluid hero" >
-    <div class="box">
+    <div class="box" id="registrationBox">
       <h1 class="text-center fs-3 fw-bold text-danger">Registration Form</h1>
-      <form action="">
+      <form action="#registration">
         <div class="input_sec mt-3">
           <input id="inputName" type="text" placeholder="Enter you name" required>
           <input id="emailAddress" type="email" placeholder="example@gmail.com" required>
@@ -24,7 +24,20 @@
           <p class="text-center pt-1">Already have an account? <a class="fw-bold" href="">Sign in</a></p>
         </div>
     </div>
+    <div class="box" id="loginBox">
+      <h1 class="text-center fs-3 fw-bold text-danger">Log In</h1>
+      <form action="#registration">
+        <div class="input_sec mt-5">
+          <input id="emailAddress" type="email" placeholder="Enter Your Email" required>
+          <input id="confirmPassword" type="password" placeholder="Enter Your Password">
+          <button  id="submitBtn" onclick="loginFnc()" class="btn mt-3 w-100 p-1 fs-4">Login</button>
+          <!-- <p class="text-center pt-1">Already have an account? <a class="fw-bold" href="">Sign in</a></p> -->
+        </div>
+    </div>
   </div>
+
+
+
 
   <!-- ? ========== Form_Input_Receive ========== -->
 
