--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
-  <!-- ? ========== Latest compiled and minified CSS ========== -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome</title>
+    <script src="https://kit.fontawesome.com/206993456b.js"></script>
 
-
+    <!-- ? ========== Latest compiled and minified CSS ========== -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- ? ========== Reviews Sections ========== -->
 
     <section class="testimonial_sec">
@@ -20,6 +23,12 @@
         </div>
 
         <div class="content">
+          <button
+            class="p-3 fs-4 mt-3 border-0 ms-2 btn btn-danger"
+            id="prevBtn"
+          >
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
           <div class="card_sec" id="cardSec">
             <div class="card text-center" id="personOne">
               <div class="card-header">
@@ -44,7 +53,7 @@
                 <p class="text-light">Ceo optimed company</p>
               </div>
             </div>
-  
+
             <div class="card text-center" id="personTwo">
               <div class="card-header">
                 <img
@@ -68,7 +77,7 @@
                 <p class="text-light">Ceo optimed company</p>
               </div>
             </div>
-  
+
             <div class="card text-center" id="personThree">
               <div class="card-header">
                 <img
@@ -93,22 +102,31 @@
               </div>
             </div>
           </div>
-
-          <div class="btn_sec d-flex justify-content-center">
+          <button
+            class="p-3 fs-4 mt-3 border-0 ms-2 btn btn-success"
+            id="nextBtn"
+          >
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+          <!-- <div class="btn_sec d-flex justify-content-center">
             <button class="p-2 mt-3 border-0 ms-2 btn btn-danger" id="prevBtn">
               Prev
             </button>
             <button class="p-2 mt-3 border-0 ms-2 btn btn-success" id="nextBtn">
               Next
             </button>
+          </div> -->
+          <div class="radio_btn">
+            <span id="radioOne" class="active"></span>
+            <span id="radioTwo"></span>
+            <span id="radioThree"></span>
           </div>
         </div>
       </div>
     </section>
 
-  
     <script src="main.js"></script>
-  <!-- ? ========== Latest compiled Javascript ========== -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <!-- ? ========== Latest compiled Javascript ========== -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
